--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,13 @@
     <div *ngIf="registerMode" class="container">
         <div class="row justify-content-center">
             <div class="col-4">
-                <app-register></app-register>
+                <app-register (cancelRegister)="cancelRegisterMode($event)">
+                </app-register>
             </div>
         </div>
 
     </div>
 </div>
+
+<!-- 
+<app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"> -->
