--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -4,6 +4,16 @@
     <div class="form-group">
         <input class="form-control" type="text" name="username" [(ngModel)]="model.username" placeholder="Username">
     </div>
+
+    <hr>
+    <!-- <div class="form-group">
+        <label>Who is your favourite user ? </label>
+        <select class="form-control">
+            <option *ngFor="let user of usersFromHomeComponent" [value]="user.userName">
+                {{user.userName}}
+            </option>
+        </select>
+    </div> -->
     <div class="form-group">
         <input class="form-control" type="password" name="password" [(ngModel)]="model.password" placeholder="Password">
     </div>
