--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,27 +1,32 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Dating App</a>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
 
-      <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-        <li class="nav-item">
-          <a class="nav-link " href="#">Matchs</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Messages</a>
-        </li>
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+
+        <ng-container *ngIf="accountService.currentUser$ | async">
+
+          <li class="nav-item">
+            <a class="nav-link " routerLink="/members" routerLinkActive="active">Matchs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+          </li>
+        </ng-container>
+
 
       </ul>
 
 
-      <div class="btn-group" dropdown *ngIf="accountService.currentUser$ | async">
+      <div class="btn-group" dropdown *ngIf="(accountService.currentUser$ | async) as user">
         <a id="button-basic" dropdownToggle type="button" class="text-light dropdown-toggle"
           aria-controls="dropdown-basic">
-          welcome User <span class="caret"></span>
+          welcome {{user.username | titlecase}} <span class="caret"></span>
         </a>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-3" role="menu" aria-labelledby="button-basic">
           <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
@@ -37,7 +42,7 @@
           placeholder="Username">
         <input name="password" [(ngModel)]="model.password" class="form-control mr-sm-2" type="password"
           placeholder="Password">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+        <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
       </form>
     </div>
   </div>
