--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -32,7 +32,7 @@
           welcome {{user.username | titlecase}} <span class="caret"></span>
         </a>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-3" role="menu" aria-labelledby="button-basic">
-          <li role="menuitem"><a class="dropdown-item">Edit Profile</a></li>
+          <li role="menuitem"><a routerLink="/member/edit" class="dropdown-item">Edit Profile</a></li>
           <li class="divider dropdown-divider"></li>
           <li role="menuitem"><a class="dropdown-item" (click)="logout()">Logout</a></li>
 
