Adding Filters | ZAID

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
         <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
         <a id="button-basic" dropdownToggle type="button" class="text-light dropdown-toggle ml-2"
           aria-controls="dropdown-basic">
-          welcome {{user.username | titlecase}} <span class="caret"></span>
+          welcome {{user.knownAs | titlecase}} <span class="caret"></span>
         </a>
         <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu mt-3" role="menu" aria-labelledby="button-basic">
           <li role="menuitem"><a routerLink="/member/edit" class="dropdown-item">Edit Profile</a></li>
