--- a/src/app/members/member-list/member-list.component.html
+++ b/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,44 @@
+<div class="text-center mt-3">
+    <h2>Your Matchs - {{pagination?.totalItems}} found</h2>
+</div>
+<div class="container mt-3">
+    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+
+        <div class="form-group">
+            <label>Age from : </label>
+            <input type="number" class="form-control ml-1" style="width:70px;" name='minAge'
+                [(ngModel)]="userParams.minAge">
+        </div>
+
+
+        <div class="form-group px-2">
+            <label>Age to : </label>
+            <input type="number" class="form-control ml-1" style="width:70px;" name='maxAge'
+                [(ngModel)]="userParams.maxAge">
+        </div>
+
+        <div class="form-group px-2">
+            <label>Show : </label>
+            <select [(ngModel)]='userParams.gender' name="gender" style="width:130px;" class="form-control ml-1">
+                <option *ngFor="let gender of genderList" [value]='gender.value'>
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+        <button class="btn btn-primary ml-1" type="submit">Apply filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset filters</button>
+    </form>
+</div>
 <div class="row">
     <div *ngFor="let member of members" class="col-2">
         <app-member-cards [member]="member"></app-member-cards>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;"
+        nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+
+    </pagination>
 </div>
