--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -23,11 +23,11 @@
                 </div>
                 <div>
                     <strong>Last Active : </strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | timeago }}</p>
                 </div>
                 <div>
                     <strong>Member Since : </strong>
-                    <p>{{member.created}}</p>
+                    <p>{{member.created | date:"shortDate"}}</p>
                 </div>
 
             </div>
