--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="member" class="row">
+<div class="row">
     <div class="col-4">
         <div class="card">
             <img class="img card-img-top img-thumbnail" src="{{member.photoUrl || './assets/user.png'}}"
@@ -26,7 +26,7 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn btn-primary">Like</button>
-                    <button class="btn btn-success">Message</button>
+                    <button (click)="selectTab(3)" class="btn btn-success">Message</button>
                 </div>
 
             </div>
@@ -34,23 +34,25 @@
     </div>
 
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading="About {{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivited($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for </h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading="Interests">
+            <tab heading="Interests" (selectTab)="onTabActivited($event)">
                 <h4>Interests</h4>
                 <p>{{member.interests}}</p>
 
             </tab>
-            <tab heading="Photos">
-                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" style="display: inline-block; margin-bottom: 20px; "></ngx-gallery>
+            <tab heading="Photos" (selectTab)="onTabActivited($event)">
+                <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"
+                    style="display: inline-block; margin-bottom: 20px; "></ngx-gallery>
             </tab>
-            <tab heading="Messages">
-                <p>Messages will go here</p>
+            <tab heading="Messages" (selectTab)="onTabActivited($event)">
+                <app-member-messages [messages]="messages"
+                    [username]="member.username? member.username : member.userName"></app-member-messages>
             </tab>
         </tabset>
 
