--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -43,7 +43,8 @@
 
             <td>{{message.messageSent | timeago}}</td>
             <td>
-                <button class="btn btn-outline-danger">Delete</button>
+                <button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)"
+                    class="btn btn-outline-danger">Delete</button>
             </td>
         </tr>
     </table>
