--- a/src/app/admin/admin-panel/admin-panel.component.html
+++ b/src/app/admin/admin-panel/admin-panel.component.html
@@ -1,1 +1,18 @@
-<p>admin-panel works!</p>
+<h2>Admin Panel </h2>
+
+<div class="tab-panel">
+
+    <tabset class="member-tabset">
+        <tab heading="User Managment" *appHasRole="['Admin']">
+            <div class="Contanier">
+                <app-user-managment></app-user-managment>
+            </div>
+        </tab>
+        <tab heading="Photo Managment" *appHasRole="['Admin','Moderator']">
+            <div class="Contanier">
+                <app-photo-managment></app-photo-managment>
+            </div>
+        </tab>
+    </tabset>
+
+</div>
