--- a/src/app/members/member-cards/member-cards.component.css
+++ b/src/app/members/member-cards/member-cards.component.css
@@ -34,3 +34,14 @@
 .animate {
     transition: all 0.3s ease-in-out;
 }
+
+
+@keyframes fa-blink{
+    0% {opacity: 1;}
+    100% {opacity: 0.4;}
+}
+
+.is-online {
+    animation: fa-bilnk 1.5 linear infinite;
+    color: rgb(1, 198, 42);
+}
