--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -4,7 +4,9 @@
             <img class="img card-img-top img-thumbnail" src="{{member.photoUrl || './assets/user.png'}}"
                 alt="{{member.knownAs}}">
             <div class="card-body">
-
+                <div class="mb-2" *ngIf="(presence.onlineUsers$ | async).includes(member.username || member.userName)">
+                        <i class="fa fa-user-circle text-success"></i> Online Now
+                </div>
                 <div>
                     <strong>Location : </strong>
                     <p>{{member.city}} , {{member.country}}</p>
